# turbowhale

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yaml  otel-collector-config.yaml  release.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: bump-release.yml  ci.yml  release.yml
docs/superpowers/plans/: 2026-04-12-chess-engine.md  2026-04-13-ci-release-pipeline.md  2026-04-13-engine-logging.md  2026-04-13-eval-improvement.md  2026-04-13-go-perft.md  2026-04-13-pvs-engine.md  2026-04-14-uci-spec-coverage.md  2026-04-17-lazy-smp-multithreading.md  2026-04-17-null-move-pruning.md  2026-04-22-search-heuristics-lmr.md
docs/superpowers/specs/: 2026-04-12-chess-engine-design.md  2026-04-13-chess-engine-pvs-design.md  2026-04-13-ci-release-pipeline-design.md  2026-04-13-engine-logging-design.md  2026-04-13-eval-design.md  2026-04-17-multithreading-design.md  2026-04-17-null-move-pruning-design.md  2026-04-22-search-heuristics-lmr-design.md
scripts/: openings.epd  selfplay.sh
src/: board.rs  engine.rs  eval.rs  main.rs  movegen.rs  perft.rs  telemetry.rs  tt.rs  uci.rs
