[package]
name = "turbowhale"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-opentelemetry = "0.29"
opentelemetry = "0.28"
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
tokio = { version = "1", features = ["full"] }
