[package]
name = "turbowhale"
version = "1.5.0"
edition = "2024"
description = "A UCI chess engine"
license = "MIT"
repository = "https://github.com/3nabla3/turbowhale"
authors = ["3nabla3"]

[dependencies]
rand = "0.10"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
tokio = { version = "1", features = ["full"] }
